--- a/EduMultiPro 3 Parte/FrontEnd/admin/6.6not.html
+++ b/EduMultiPro 3 Parte/FrontEnd/admin/6.6not.html
@@ -82,14 +82,216 @@
 
             <!--Tabla-->
             <div class="col-10" id="contenidoTabla">
-                <div class="titulo">
-                    <h1>Notas del Curso</h1>
-                    <button class="crear">Crear Usuario</button>
-                </div>
-                <div class="contenedor-tabla">
-                    
-                </div>
+              <!--Partes 1-->
+            <div class="parte1">
+              <button type="submit" id="subir">Subir Notas</button>
+              <button type="submit" id="guardar">Guardar</button>
+              <Button type="submit" id="salir">Salir</Button>
             </div>
+
+            <div class="parte2">
+              <div class="contenedorTabla">
+                  <div class="titulo"><h2>Periodos academicos por lectivo</h2></div>
+                  <div class="selector">
+                      <input type="text" id="buscar" placeholder="Buscar" name="buscar">
+                      <button type="submit" id="boton1">Buscar</button>
+                  </div>
+                  <table class="periodos" id="periodos">
+                      <thead>
+                          <tr><th></th>
+                              <th><h2>COD</h2></th>
+                              <th><h2>Periodo</h2></th>
+                              <th><h2>Inicio</h2></th>
+                              <th><h2>Cierre</h2></th>
+                              <th><h2>Estado</h2></th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <td><button></button></td>
+                              <td>1</td>
+                              <td>Primer Periodo</td>
+                              <td>7 de febrero de 2022</td>
+                              <td>22 de abril de 2022</td>
+                              <td>Abirto para calificar hasta el dia 22 de abril de 2022 </td>
+                          </tr>
+                          <tr>
+                              <td><button></button></td>
+                              <td>2</td>
+                              <td>Segundo Periodo</td>
+                              <td>7 de febrero de 2022</td>
+                              <td>22 de abril de 2022</td>
+                              <td>Abirto para calificar hasta el dia 22 de abril de 2022 </td>
+                          </tr>
+                          <tr>
+                              <td><button></button></td>
+                              <td>3</td>
+                              <td>Tercer Periodo</td>
+                              <td>7 de febrero de 2022</td>
+                              <td>22 de abril de 2022</td>
+                              <td>Abirto para calificar hasta el dia 22 de abril de 2022 </td>
+                          </tr>
+                          <tr>
+                              <td><button></button></td>
+                              <td>4</td>
+                              <td>Cuarto Periodo</td>
+                              <td>7 de febrero de 2022</td>
+                              <td>22 de abril de 2022</td>
+                              <td>Abirto para calificar hasta el dia 22 de abril de 2022 </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+              <div class="logros">
+                  <div class="titulo"><h2>Logros del curso</h2></div>
+                  <table class="logo" id="logro">
+                      <thead>
+                          <tr>
+                              <th><h2>Tipo</h2></th>
+                              <th><h2>Agregar Logros</h2></th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <td>Cognitivo</td>
+                              <td>
+                                  <select name="" id="tipoLogro">
+                                      <option value="">Ninguno</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                  </select>
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>Procedimental</td>
+                              <td>
+                                  <select name="" id="tipoLogro">
+                                      <option value="">Ninguno</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                  </select>
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>Actitudinal</td>
+                              <td>
+                                  <select name="" id="tipoLogro">
+                                      <option value="">Ninguno</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                      <option value="">Codigo--Logro--Descripcion</option>
+                                  </select>
+                              </td>
+                          </tr>
+                          <tr>
+                              <td>Observaciones</td>
+                              <td>
+                              <input type="text" name="Observaciones" id="Observaciones" placeholder="Mis Observaciones">
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+            </div>
+            <div class="parte3">
+              <table class="estudiantesLista" id="estudiantesLista">
+                  <thead>
+                      <tr>
+                          <th><button></button></th>
+                          <th><h2>NO.</h2></th>
+                          <th><h2>Estudiante</h2></th>
+                          <th><h2>tranajo1</h2></th>
+                          <th><h2>trabajo2</h2></th>
+                          <th><h2>trabajo3</h2></th>
+                          <th><h2>trabajo4</h2></th>
+                          <th><h2>Final</h2></th>
+                          <th><h2>In</h2></th>
+                          <th><h2>Logro</h2></th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <td><button></button></td>
+                          <td>1</td>
+                          <td>William Andres</td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"></td>
+                          <td><input type="number" name="" id="In" placeholder="In"></td>
+                          <td>
+                              <select name="" id="">
+                                  <option value="">Ninguno</option>
+                                  <option value="">Logro1</option>
+                                  <option value="">Logro2</option>
+                                  <option value="">Logro3</option>
+                              </select>
+                          </td>
+                      </tr>
+                      <tr>
+                          <td><button></button></td>
+                          <td>2</td>
+                          <td>Juan Carlos</td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"></td>
+                          <td><input type="number" name="" id="In" placeholder="In"></td>
+                          <td>
+                              <select name="" id="">
+                                  <option value="">Ninguno</option>
+                                  <option value="">Logro1</option>
+                                  <option value="">Logro2</option>
+                                  <option value="">Logro3</option>
+                              </select>
+                          </td>
+                      </tr>
+                      <tr>
+                          <td><button></button></td>
+                          <td>3</td>
+                          <td>Andres Quintero</td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"></td>
+                          <td><input type="number" name="" id="In" placeholder="In"></td>
+                          <td>
+                              <select name="" id="">
+                                  <option value="">Ninguno</option>
+                                  <option value="">Logro1</option>
+                                  <option value="">Logro2</option>
+                                  <option value="">Logro3</option>
+                              </select>
+                          </td>
+                      </tr>
+                      <tr>
+                          <td><button></button></td>
+                          <td>4</td>
+                          <td>Miguel Segundo</td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"><img src="img/f13.png" alt=""></td>
+                          <td><input type="number" name="" id="nota" placeholder="Nota"></td>
+                          <td><input type="number" name="" id="In" placeholder="In"></td>
+                          <td>
+                              <select name="" id="">
+                                  <option value="">Ninguno</option>
+                                  <option value="">Logro1</option>
+                                  <option value="">Logro2</option>
+                                  <option value="">Logro3</option>
+                              </select>
+                          </td>
+                      </tr>
+                  </tbody>
+              </table>
+            </div>
+          </div>
         </div>
     </div>
 
@@ -108,6 +310,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="../js/2.js"></script>
+  <script src="../admin/js/6.6.js"></script>
 </body>
 </html>
